# llm-finetuning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: config.py
src/: constants.py  llm_pipeline.py
src/data_preprocessing/: generate_sample_dataset.py  preprocess_text.py
src/models/: llm_trainer.py  test_llm.py
src/utils/: helpers.py  mlflow_utilities.py
