[project]
name = "llm-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "pyarrow>=21.0.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "peft>=0.13.0",  # For LoRA fine-tuning
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "tqdm>=4.66.0",
    "mlflow>=2.17.0",  # MLflow integration
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
]
